[package]
name = "csvrow"
version = "0.1.1"
edition = "2021"
author = ["Alex Clark <alexandercrclark@gmail.com>"]
description = "Fast and simple crate for taking a string slice and iterating over the fields in a manner that adheres to RFC-4180"
keywords = ["csv", "comma", "delimited", "separated", "rfc4180"]
license = "Unlicense/MIT"
categories = ["parser-implementations"]
readme = "README.md"
homepage = "https://github.com/RetrospectionSoftware/csvrow/"
repository = "https://github.com/RetrospectionSoftware/csvrow/"
documentation = "https://docs.rs/csvrow"

[dependencies]
